feat: about page created

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -26,3 +26,10 @@ h6 {
   width: 95%;
   margin: auto;
 }
+
+.get-in-touch {
+  color: #00433e;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 123%;
+}
