--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -5,6 +5,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  transition: all 0.3s;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
